--- a/app/src/main/res/layout/splash_activity.xml
+++ b/app/src/main/res/layout/splash_activity.xml
@@ -6,7 +6,9 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@mipmap/ic_logo"
+        android:src="@drawable/ic_met_logo"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
         ></ImageView>
 
 </LinearLayout>
