--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -20,14 +20,15 @@
     <item
         android:title=""
         android:enabled="false" />
-    <item android:id="@+id/logout"
+    <item android:id="@+id/signout"
         android:title="My Account">
         <menu>
             <group android:checkableBehavior="single">
-                <item android:id="@+id/account"
+                <item android:id="@+id/profile"
                     android:icon="@drawable/ic_person_black_24dp"
                     android:title="Profile"/>
                 <item
+                    android:id="@+id/logout"
                     android:icon="@drawable/ic_exit_to_app_black_24dp"
                     android:title="Logout" />
 
