--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,17 @@
 <color name="secondaryDarkColor">#000000</color>
 <color name="primaryTextColor">#ffffff</color>
 <color name="secondaryTextColor">#ffffff</color>
+
+    <!--text color -->
+    <color name="textColor">#273d52</color>
+    <color name="headerColor">#145795</color>
+
+    <!-- gradient color -->
+    <color name="startColor">#006797</color>
+    <color name="endColor">#489855</color>
+    <color name="centerColor">#006797</color>
+    <color name="userRow">#403fc68b</color>
+
+    <!-- icon color -->
+    <color name="iconColor">#145798</color>
 </resources>
