--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:hint="E-mail"
+            android:hint="@string/e_mail"
             android:inputType="textEmailAddress" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:ems="10"
-            android:hint="Password"
+            android:hint="@string/password"
             android:inputType="textPassword" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -63,7 +63,7 @@
         android:layout_height="45dp"
         android:layout_marginTop="100dp"
         android:background="@drawable/reound_background"
-        android:text="Register!"
+        android:text="@string/register"
         android:textColor="#000"
         android:layout_below="@id/passwordLayout"
         android:layout_centerHorizontal="true"
@@ -76,7 +76,7 @@
         android:layout_height="48dp"
         android:background="@null"
         android:layout_marginTop="10dp"
-        android:text="Already a Member!"
+        android:text="@string/already_a_member"
         android:textAllCaps="false"
         android:textColor="@color/colorAccent"
         android:layout_below="@id/registerButton"
