--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Users"
+                    android:text="@string/angebote"
                     android:textColor="@android:color/white"
                     android:textSize="16sp"
                     android:layout_gravity="center"
@@ -38,12 +38,13 @@
             </androidx.appcompat.widget.Toolbar>
         </LinearLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_weight="8"
             android:layout_width="match_parent"
             android:padding="10dp"
             android:background="@drawable/recyclerview_bg"
             android:layout_height="0dp">
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerview"
                 android:layout_width="match_parent"
@@ -51,7 +52,20 @@
                 android:layout_marginTop="3dp"
                 android:layout_height="wrap_content"/>
 
-        </LinearLayout>
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/newAdd"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="end|bottom"
+                android:layout_margin="16dp"
+                android:background="@android:color/transparent"
+                android:backgroundTint="@color/colorPrimaryDark"
+                android:src="@drawable/ic_add_black_24dp"
+                app:rippleColor="@android:color/white" />
+
+        </RelativeLayout>
 
     </LinearLayout>
 
